release: bump version to 0.10.0